[package]
name = "portal_gravity"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
egui-winit = "0.33.3"
glam = { version = "0.30.9", features = ["bytemuck"] }
pollster = "0.4.0"
wgpu = "27.0.1"
winit = { version = "0.30.12", features = ["wayland"] }
